Machine and berry now. Components in swagger done.
