# routes/pokemon.js
@@ -2,20 +2,19 @@ var express = require('express');
 var router = express.Router();
 const request = require('request');
 
-/* GET information's pokemon. */
-router.get('/pokemon', (req, res, next) => {
-  var pokemonRequested = req.query.pokemon;
-  console.log(pokemonRequested);
-  if (pokemonRequested === undefined || pokemonRequested === "") {
-    return res.status(400).send("Pokemon name is missing. Try again.");
+/* GET information's machine. */
+router.get('/machine', (req, res, next) => {
+  var machinenRequested = req.query.machine;
+  console.log(machinenRequested);
+  if (machinenRequested === undefined || machinenRequested === "") {
+    return res.status(400).send("Machine name or ID is missing. Try again.");
   }
-  request(`https://pokeapi.co/api/v2/pokemon/${pokemonRequested}`, function (error, response, body) {
-   /*  console.error('error:', error);
-    console.log('statusCode:', response && response.statusCode);
-    console.log('body:', body); */
+  request(`https://pokeapi.co/api/v2/machine/${machinenRequested}`, function (error, response, body) {
     if (body == "Not Found") {
-      return res.status(404).send(`"${pokemonRequested}" is not a pokemon.`);
+      return res.status(404).send(`"${machinenRequested}" is not a machine.`);
     }
+    console.log(JSON.parse(body));
+    /* return res.status(200).send(JSON.parse(body)); */
     return res.status(200).send(body);
   });
 });
@@ -28,12 +27,11 @@ router.get('/berry', (req, res, next) => {
     return res.status(400).send("Berry name is missing. Try again.");
   }
   request(`https://pokeapi.co/api/v2/berry/${berryRequested}`, function (error, response, body) {
-    /* console.error('error:', error);
-    console.log('statusCode:', response && response.statusCode);
-    console.log('body:', body); */
     if (body == "Not Found") {
       return res.status(404).send(`"${berryRequested}" is not a berry in pokemon world.`);
     }
+    /* console.log(JSON.parse(body)); */
+    /* return res.status(200).send(JSON.parse(body)); */
     return res.status(200).send(body);
   });
 });
